kotlin-ide/idea/testData/multiModuleLineMarker/fromExpectCompanion/common/common.kt
expect class <!LINE_MARKER("descr='Has actuals in JVM'")!>WithCompanion<!> {
    companion <!LINE_MARKER("descr='Has actuals in JVM'")!>object<!> {

    }
}